more bridge api tests

--- a/hivemind/tavern/bridge_api_negative/get_account_posts/blog/not_existing_start_author_permlink.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_account_posts/blog/not_existing_start_author_permlink.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-  test_name: Hivemind bridge.get_account_posts invalid account
+  test_name: Hivemind bridge.get_account_posts
 
   marks:
     - patterntest
@@ -9,7 +9,7 @@
     - !include ../../../common.yaml
 
   stages:
-    - name: get_account_posts invalid account
+    - name: get_account_posts
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -19,12 +19,12 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_account_posts"
-          params: {"sort":"blog","account":"invalid_account"}
+          params: {"sort":"blog","account":"gtg","start_author": "gtg","start_permlink": "non_existing_permlink"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "invalid_account"
+            method: "not_existing_start_author_permlink"
             directory: "bridge_api_negative/get_account_posts/blog"
             error_response: true
