--- a/hivemind/tavern/bridge_api_negative/get_post/extra_parameter.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_post/extra_parameter.tavern.yaml
@@ -1,15 +1,15 @@
 ---
-  test_name: Hivemind bridge.get_account_posts invalid account
+  test_name: Hivemind bridge_api.get_post extra parameter patterns test
 
   marks:
     - patterntest
     - negative
 
   includes:
-    - !include ../../../common.yaml
+    - !include ../../common.yaml
 
   stages:
-    - name: get_account_posts invalid account
+    - name: get_post extra parameter
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -18,13 +18,13 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "bridge.get_account_posts"
-          params: {"sort":"blog","account":"invalid_account"}
+          method: "bridge.get_post"
+          params: {"author":"gtg", "permlink":"test","estra_parameter":"extra_value"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "invalid_account"
-            directory: "bridge_api_negative/get_account_posts/blog"
+            method: "extra_parameter"
+            directory: "bridge_api_negative/get_post"
             error_response: true
