--- a/hivemind/tavern/bridge_api_patterns/get_profile/observer_followed_true.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/get_profile/observer_followed_true.tavern.yaml
@@ -1,15 +1,14 @@
 ---
-  test_name: Hivemind bridge.get_account_posts invalid account
+  test_name: Hivemind bridge_api.get_profile observer_followed_true patterns test
 
   marks:
     - patterntest
-    - negative
 
   includes:
-    - !include ../../../common.yaml
+    - !include ../../common.yaml
 
   stages:
-    - name: get_account_posts invalid account
+    - name: get_profile observer_followed_true with observer
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -18,13 +17,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "bridge.get_account_posts"
-          params: {"sort":"blog","account":"invalid_account"}
+          method: "bridge.get_profile"
+          params: {"account":"dantheman","observer":"nextgencrypto"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "invalid_account"
-            directory: "bridge_api_negative/get_account_posts/blog"
-            error_response: true
+            method: "observer_followed_true"
+            directory: "bridge_api_patterns/get_profile"
