[ABW]: added .orig files for new tests one test corrected (bad method name) some tests in 'by_permlink' category moved to positive - checks relaxed for consistency

--- a/hivemind/tavern/database_api_negative/list_comments/by_parent/invalid_start_post_author.tavern.yaml
+++ b/hivemind/tavern/database_api_negative/list_comments/by_parent/invalid_start_post_author.tavern.yaml
@@ -2,7 +2,7 @@
 test_name: Hivemind database_api.list_comments patterns test order "by_parent" invalid start_post_author
 
 marks:
-  - patterntest # fat node did not require author account
+  - patterntest
   - negative
 
 includes:
