--- a/hivemind/tavern/condenser_api_negative/get_content/multi_deleted_post.tavern.yaml
+++ b/hivemind/tavern/condenser_api_negative/get_content/multi_deleted_post.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_content deleted post patterns test
 
   marks:
-    - patterntest # bug in old HM and empty post in fat node
+    - patterntest # bug in old HM and empty post in fat node; post deleted 5 times within 5mln blocks and not recreated at the end
     - negative
 
   includes:
@@ -19,12 +19,12 @@
           jsonrpc: "2.0"
           id: 1
           method: "condenser_api.get_content"
-          params: ["jsc", "testing-summary"]
+          params: ["ilmam", "test"]
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "deleted_post"
+            method: "multi_deleted_post"
             directory: "condenser_api_negative/get_content"
             error_response: true
