--- a/hivemind/tavern/database_api_negative/list_comments/by_author_last_update/invalid_limit.tavern.yaml
+++ b/hivemind/tavern/database_api_negative/list_comments/by_author_last_update/invalid_limit.tavern.yaml
@@ -2,7 +2,7 @@
 test_name: Hivemind database_api.list_comments patterns test order "by_author_last_update" correct author and date
 
 marks:
-  - patterntest # 500 internal server error
+  - patterntest
   - negative
 
 includes:
