full sync tavern tests

--- a/hivemind/tavern/bridge_api_negative/account_notifications/hive-197922.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/account_notifications/hive-197922.tavern.yaml
@@ -3,6 +3,7 @@
 
   marks:
     - patterntest # communities not present in 5mln blocks
+    - negative
 
   includes:
     - !include ../../common.yaml
@@ -18,7 +19,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.account_notifications"
-          params: {"account":"hive-148441","limit":50}
+          params: {"account":"hive-197922","limit":50}
       response:
         status_code: 200
         verify_response_with:
@@ -27,4 +28,3 @@
             method: "hive-148441"
             directory: "bridge_api_negative/account_notifications"
             error_response: true
-
