--- a/hivemind/tavern/bridge_api_negative/get_account_posts/feed/invalid_account.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_account_posts/feed/invalid_account.tavern.yaml
@@ -19,7 +19,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_account_posts"
-          params: {"sort":"feed","account":"rollinshive"}
+          params: {"sort":"feed","account":"rollinshive2"}
       response:
         status_code: 200
         verify_response_with:
