[ABW]: supplemented missing .orig files for new tests

--- a/hivemind/tavern/bridge_api_patterns/account_notifications/dantheman.tavern.yaml
+++ b/hivemind/tavern/bridge_api_patterns/account_notifications/dantheman.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind bridge_api.account_notifications patterns test
 
   marks:
-    - patterntest
+    - patterntest # old notification score was related to voting power, now it is related to reputation, since vp is not available to HM
 
   includes:
     - !include ../../common.yaml
