--- a/hivemind/tavern/condenser_api_negative/get_content/deleted_post.tavern.yaml
+++ b/hivemind/tavern/condenser_api_negative/get_content/deleted_post.tavern.yaml
@@ -9,7 +9,7 @@
     - !include ../../common.yaml
 
   stages:
-    - name: get_content gtg
+    - name: get_content
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
