--- a/hivemind/tavern_full_sync/bridge_api_patterns/get_ranked_posts/trending/max_limit.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/get_ranked_posts/trending/max_limit.tavern.yaml
@@ -1,11 +1,11 @@
 ---
-  test_name: Hivemind bridge_api.get_ranked_posts trending maximum limit patterns test
+  test_name: Hivemind bridge_api.get_ranked_posts trending maximum limit
 
   marks:
     - fullsynctest
 
   includes:
-    - !include ../../../../common.yaml
+    - !include ../../../common.yaml
 
   stages:
     - name: bridge_api.get_ranked_posts trending maximum limit patterns test
@@ -18,11 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_ranked_posts"
-          params: {"sort":"trending","tag":"","observer":"alice", "limit": 100}
+          params: {"sort":"trending","tag":"development","observer":"alice", "limit": 100}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
             method: "max_limit"
-            directory: "full_sync/bridge_api_patterns/get_ranked_posts/trending"
+            directory: "bridge_api_patterns/get_ranked_posts/trending"
