--- a/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/replies/jlkreiss.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/replies/jlkreiss.tavern.yaml
@@ -1,14 +1,13 @@
 ---
-  test_name: Hivemind bridge_api.list_communities sort_new page 2
-
+  test_name: Hivemind bridge_api.get_account_posts sort replies jlkreiss
   marks:
-    - fullsynctest # is this return
+    - patterntest
 
   includes:
-    - !include ../../common.yaml
+    - !include ../../../common.yaml
 
   stages:
-    - name: bridge_api.list_communities sort_new page 2
+    - name: get_account_posts sort replies jlkreiss
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -17,12 +16,13 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "bridge.list_communities"
-          params: {"sort":"new","last": "hive-181829"}
+          method: "bridge.get_account_posts"
+          params: {"sort":"replies", "account":"jlkreiss"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "sort_new_page_2"
-            directory: "bridge_api_patterns/list_communities"
+            method: "jlkreiss"
+            directory: "bridge_api_patterns/get_account_posts/replies"
+
