--- a/hivemind/tavern_full_sync/bridge_api_patterns/get_community_context/owner.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/get_community_context/owner.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-  test_name: Hivemind bridge_api.list_communities sort_rank
+  test_name: Hivemind bridge_api.get_community_context owner
 
   marks:
     - fullsynctest
@@ -8,7 +8,7 @@
     - !include ../../common.yaml
 
   stages:
-    - name: bridge_api.list_communities sort_rank
+    - name: get_community_context
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -17,12 +17,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "bridge.list_communities"
-          params: {"sort":"rank"}
+          method: "bridge.get_community_context"
+          params: {"name":"hive-148441", "account": "hive-148441"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "sort_rank"
-            directory: "bridge_api_patterns/list_communities"
+            method: "owner"
+            directory: "bridge_api_patterns/get_community_context"
