[ABW]: added .orig files to new tests corrected some tests that were not testing what they were meant to be supplemented tests for get_blog/get_blog_entries deleted test for check that is no longer performed (replaced with error recovery)

--- a/hivemind/tavern/bridge_api_negative/get_post/invalid_observer.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_post/invalid_observer.tavern.yaml
@@ -2,8 +2,10 @@
   test_name: Hivemind bridge_api.get_post invalid observer patterns test
 
   marks:
-    - patterntest
+    - patterntest # neither old nor new code properly validates observer
     - negative
+    - failing
+    - xfail # should fail on validation of observer
 
   includes:
     - !include ../../common.yaml
@@ -19,7 +21,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.get_post"
-          params: {"author":"gtg", "permlink":"not_existing_permlink", "observer":"invalid_account"}
+          params: {"author":"gtg", "permlink":"hello-world", "observer":"invalid_account"}
       response:
         status_code: 200
         verify_response_with:
