--- a/hivemind/tavern/bridge_api_negative/get_account_posts/blog/invalid_observer.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_account_posts/blog/invalid_observer.tavern.yaml
@@ -4,6 +4,8 @@
   marks:
     - patterntest
     - negative
+    - failing
+    - xfail # observer not validated and not used (original validated it but then ignored)
 
   includes:
     - !include ../../../common.yaml
