--- a/hivemind/tavern/bridge_api_negative/get_trending_topics/invalid_observer.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_trending_topics/invalid_observer.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind bridge_api.get_trending_topics patterns invalid observer test
 
   marks:
-    - patterntest
+    - patterntest # observer is ignored both by old and new; it is not clear what observer could influence in this call
     - negative
     - xfail # it should fail after implementing observer filtering to get_trending_topics
 
