--- a/hivemind/tavern/bridge_api_negative/list_all_subscriptions/extra_parameter.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/list_all_subscriptions/extra_parameter.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-  test_name: bridge_api.list_all_subscriptions invalid account
+  test_name: bridge_api.list_all_subscriptions
 
   marks:
     - patterntest
@@ -9,7 +9,7 @@
     - !include ../../common.yaml
 
   stages:
-    - name: bridge_api.list_all_subscriptions invalid account
+    - name: bridge_api.list_all_subscriptions
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -19,7 +19,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "bridge.list_all_subscriptions"
-          params: {"account":"invalid_account"}
+          params: {"account":"steemit", "extra_parameter": "extra_value"}
       response:
         status_code: 200
         verify_response_with:
