--- a/hivemind/tavern/condenser_api_patterns/get_blog/limit_at_least_100.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_blog/limit_at_least_100.tavern.yaml
@@ -2,7 +2,8 @@
   test_name: Hivemind condenser_api.get_blog limit at least 100 patterns test
 
   marks:
-    - patterntest
+    - patterntest # original code didn't correct limit when offset was auto selected (.orig created with limit 1), it was corrected in new version
+                  # (effectively limit becomes 1 because there is just one blog entry)
 
   includes:
     - !include ../../common.yaml
