[ABW]: some tests marked as passing after merge one test pattern was incorrect - accepted change that needs to be investigated (test is failing)

--- a/hivemind/tavern/bridge_api_negative/get_account_posts/blog/invalid_observer.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_account_posts/blog/invalid_observer.tavern.yaml
@@ -2,10 +2,8 @@
   test_name: Hivemind bridge.get_account_posts invalid observer
 
   marks:
-    - patterntest
+    - patterntest # original validated observer but then ignored (it is also ignored now even though it makes no sense)
     - negative
-    - failing
-    - xfail # observer not validated and not used (original validated it but then ignored)
 
   includes:
     - !include ../../../common.yaml
