--- a/hivemind/tavern/bridge_api_negative/get_post/invalid_observer.tavern.yaml
+++ b/hivemind/tavern/bridge_api_negative/get_post/invalid_observer.tavern.yaml
@@ -2,10 +2,8 @@
   test_name: Hivemind bridge_api.get_post invalid observer patterns test
 
   marks:
-    - patterntest # neither old nor new code properly validates observer
+    - patterntest # old code did not validate observer
     - negative
-    - failing
-    - xfail # should fail on validation of observer
 
   includes:
     - !include ../../common.yaml
