--- a/hived/tavern/account_history_api_patterns/get_account_history/comment_operation.tavern.yaml
+++ b/hived/tavern/account_history_api_patterns/get_account_history/comment_operation.tavern.yaml
@@ -18,7 +18,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "account_history_api.get_account_history"
-          params: {"account":"blocktrades","operation_filter_low": 2}
+          params: {"account":"blocktrades","operation_filter_low": 2, "start": 206145, "limit": 6}
       response:
         status_code: 200
         verify_response_with:
