get_account_history with operation_filter_low operations

--- a/hived/tavern/account_history_api_patterns/get_account_history/change_recovery_account_operation.tavern.yaml
+++ b/hived/tavern/account_history_api_patterns/get_account_history/change_recovery_account_operation.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hived account_history_api get_account_history filter to limit_order_create2_operation
+  test_name: Hived account_history_api change_recovery_account_operation
 
   marks:
-    - patterntest # no noempty result
+    - patterntest
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: account_history_api get_account_history limit_order_create2_operation
+    - name: account_history_api change_recovery_account_operation
       request:
         url: "{service.url:s}"
         method: POST
@@ -18,11 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "account_history_api.get_account_history"
-          params: {"account":"blocktrades","operation_filter_low": 2097152,"start": 1000,"limit": 1000}
+          params: {"account":"barrie", "operation_filter_low": 67108864, "start": 90, "limit": 1}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "limit_order_create2_operation"
+            method: "change_recovery_account_operation"
             directory: "account_history_api_patterns/get_account_history"
