--- a/hived/tavern/account_history_api_patterns/get_account_history/gtg.tavern.yaml
+++ b/hived/tavern/account_history_api_patterns/get_account_history/gtg.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hived account_history_api get_transaction gtg
 
   marks:
-    - patterntest # limit should be 10, there is 11 in response
+    - patterntest
 
   includes:
     - !include ../../common.yaml
