--- a/hived/tavern/account_history_api_patterns/get_account_history/smt_contribute_operation.tavern.yaml
+++ b/hived/tavern/account_history_api_patterns/get_account_history/smt_contribute_operation.tavern.yaml
@@ -3,6 +3,7 @@
 
   marks:
     - patterntest # no noempty result in 5mln blocks
+    # only if HIVE_ENABLE_SMT
 
   includes:
     - !include ../../common.yaml
