--- a/hived/tavern/account_history_api_patterns/get_account_history/author_reward_operation.tavern.yaml
+++ b/hived/tavern/account_history_api_patterns/get_account_history/author_reward_operation.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hived account_history_api author_reward_operation
 
   marks:
-    - patterntest # no noempty result in 5mln blocks
+    - patterntest # virtual
 
   includes:
     - !include ../../common.yaml
@@ -18,7 +18,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "account_history_api.get_account_history"
-          params: {"account":"blocktrades", "operation_filter_low": 72057594037927936, "start": 1000, "limit": 1000}
+          params: {"account":"xeroc", "operation_filter_low": 562949953421312, "start": 18934, "limit": 5}
       response:
         status_code: 200
         verify_response_with:
