--- a/hived/tavern/account_history_api_patterns/get_account_history/claim_reward_balance2_operation.tavern.yaml
+++ b/hived/tavern/account_history_api_patterns/get_account_history/claim_reward_balance2_operation.tavern.yaml
@@ -2,7 +2,8 @@
   test_name: Hived account_history_api claim_reward_balance2_operation
 
   marks:
-    - patterntest # no noempty result in 5mln blocks
+    - patterntest # no noempty result in 5mln blocks 
+    # only if HIVE_ENABLE_SMT
 
   includes:
     - !include ../../common.yaml
@@ -18,7 +19,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "account_history_api.get_account_history"
-          params: {"account":"blocktrades", "operation_filter_low": 549755813888, "start": 1000, "limit": 1000}
+          params: {"account":"blocktrades", "operation_filter_low": 281474976710656, "start": 1000, "limit": 1000}
       response:
         status_code: 200
         verify_response_with:
