--- a/hived/tavern/account_history_api_patterns/get_account_history/fill_convert_request_operation.tavern.yaml
+++ b/hived/tavern/account_history_api_patterns/get_account_history/fill_convert_request_operation.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hived account_history_api fill_convert_request_operation
 
   marks:
-    - patterntest # no noempty result in 5mln blocks
+    - patterntest # virtual
 
   includes:
     - !include ../../common.yaml
@@ -18,7 +18,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "account_history_api.get_account_history"
-          params: {"account":"blocktrades", "operation_filter_low": 36028797018963968, "start": 1000, "limit": 1000}
+          params: {"account":"xeroc", "operation_filter_low": 281474976710656, "start": 15169, "limit": 1}
       response:
         status_code: 200
         verify_response_with:
