--- a/hived/tavern/account_history_api_patterns/get_account_history/interest_operation.tavern.yaml
+++ b/hived/tavern/account_history_api_patterns/get_account_history/interest_operation.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hived account_history_api interest_operation
 
   marks:
-    - patterntest # no noempty result in 5mln blocks
+    - patterntest # virtual
 
   includes:
     - !include ../../common.yaml
@@ -18,7 +18,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "account_history_api.get_account_history"
-          params: {"account":"blocktrades", "operation_filter_low": 1152921504606846976, "start": 1000, "limit": 1000}
+          params: {"account":"xeroc", "operation_filter_low": 9007199254740992, "start": 8115, "limit": 1}
       response:
         status_code: 200
         verify_response_with:
