--- a/hived/tavern/database_api_patterns/find_limit_orders/find.tavern.yaml
+++ b/hived/tavern/database_api_patterns/find_limit_orders/find.tavern.yaml
@@ -1,15 +1,14 @@
 ---
-  test_name: Hived get_blog_entries
+  test_name: Hived find_limit_orders
 
   marks:
-    - patterntest
-    - xfail # some pat parameters disappear
+    - patterntest # todo find nonempty orders
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: get_blog_entries
+    - name: find_limit_orders
       request:
         url: "{service.url:s}"
         method: POST
@@ -18,13 +17,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "condenser_api.get_blog_entries"
-          params: ["gtg",0,100]
+          method: "database_api.find_limit_orders"
+          params: {"account": "gtg"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "gtg"
-            directory: "condenser_api_patterns/get_blog_entries"
-            ignore_tags: ['entry_id','permlink','reblogged_on']
+            method: "find"
+            directory: "database_api_patterns/find_limit_orders"
