--- a/hived/tavern/database_api_patterns/list_limit_orders/list.tavern.yaml
+++ b/hived/tavern/database_api_patterns/list_limit_orders/list.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hived list_hbd_conversion_requests
+  test_name: Hived list_limit_orders
 
   marks:
-    - patterntest # todo, try to set parameters in a way to get old conversion requests, looks like its not working properly
+    - patterntest
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: list_hbd_conversion_requests
+    - name: list_limit_orders
       request:
         url: "{service.url:s}"
         method: POST
@@ -17,13 +17,13 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "database_api.list_hbd_conversion_requests"
+          method: "database_api.list_limit_orders"
           params: {"start":["gtg", 1], "limit":10, "order":"by_account"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "by_account"
-            directory: "database_api_patterns/list_hbd_conversion_requests"
-            ignore_tags: ['requests']
+            method: "list"
+            directory: "database_api_patterns/list_limit_orders"
+            ignore_tags: ['orders']
